@@ -1,3 +1,12 @@
+03-25-20 : Multiclass hitpoint fixes:
+           - Monks base hitpoints have been increased but they no longer 
+             have access to advanced defense. Overall this should even out. If
+             you have a single class monk that put points into advanced defense
+             you can get that fixed up by an admin. This change paves the way 
+             for future improvements to to the skill for War/Deik.
+           - Fixed a bug with multiclass hitpoints where previously it chose
+             the base hitpoints of the first class now it takes the average.
+
 01-22-20 : Some Deikhan work here.
            - Lay Hands cooldown has been shortened and now heals more
            - Synostodweomer enabled and reimagined as a small hit point buff.
